force-app/main/default/objects/Test_Code_Default__mdt/Test_Code_Default__mdt.object-meta.xml
<CustomObject>
    <label>Test Code Default</label>
    <pluralLabel>Test Code Defaults</pluralLabel>
</CustomObject>