force-app/main/default/objects/Test_Code_Default__mdt/fields/Blob_Value__c.field-meta.xml
<CustomField>
    <fullName>Blob_Value__c</fullName>
    <inlineHelpText>Will be converted to Blob at runtime with Blob.valueOf()</inlineHelpText>
    <label>Blob Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>