force-app/main/default/objects/Test_Code_Default__mdt/fields/Checkbox_Value__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>