force-app/main/default/objects/Test_Code_Default__mdt/fields/Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Value__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>