force-app/main/default/objects/Test_Code_Default__mdt/fields/Email_Value__c.field-meta.xml
<CustomField>
    <fullName>Email_Value__c</fullName>
    <label>Email Value</label>
    <type>Email</type>
</CustomField>