force-app/main/default/objects/Test_Code_Default__mdt/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>