force-app/main/default/objects/Test_Code_Default__mdt/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>