force-app/main/default/objects/Test_Code_Default__mdt/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <label>Lookup Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>