force-app/main/default/objects/Test_Code_Default__mdt/fields/Percent_Value__c.field-meta.xml
<CustomField>
    <fullName>Percent_Value__c</fullName>
    <label>Percent Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>