force-app/main/default/objects/Test_Code_Default__mdt/fields/Phone_Value__c.field-meta.xml
<CustomField>
    <fullName>Phone_Value__c</fullName>
    <label>Phone Value</label>
    <type>Phone</type>
</CustomField>