force-app/main/default/objects/Test_Code_Default__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <description>Enter the value of the picklist as text here.</description>
    <inlineHelpText>Enter the value of the picklist as text here.</inlineHelpText>
    <label>Picklist Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>