force-app/main/default/objects/Test_Code_Default__mdt/fields/sObjectField__c.field-meta.xml
<CustomField>
    <fullName>sObjectField__c</fullName>
    <label>sObjectField</label>
    <length>80</length>
    <type>Text</type>
</CustomField>